# nuncio

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-desktop.yml  release-nightly.yml  release.yml  wiki-sync.yml
crates/nuncio-cal/: Cargo.toml
crates/nuncio-cal/src/: caldav.rs  carddav.rs  lib.rs  mock.rs  nlp.rs  parser.rs  rrule.rs  scheduling.rs
crates/nuncio-cli/: Cargo.toml
crates/nuncio-cli/src/: args.rs  lib.rs  main.rs  output.rs  runner.rs
crates/nuncio-cli/tests/: cli_system_test.rs
crates/nuncio-contacts/: Cargo.toml
crates/nuncio-contacts/src/: carddav.rs  db.rs  lib.rs  models.rs
crates/nuncio-core/: Cargo.toml
crates/nuncio-core/src/: ai.rs  config.rs  e2ee.rs  export.rs  ipc.rs  lib.rs  mcp_policy.rs  model.rs  plugin.rs  update.rs  worm_audit.rs
crates/nuncio-core/src/ipc/: client.rs  framing.rs  mod.rs  protocol.rs  server.rs
crates/nuncio-core/tests/: ipc_system_test.rs
crates/nuncio-filter/: Cargo.toml
crates/nuncio-filter/src/: ast.rs  codegen.rs  engine.rs  lib.rs  outbox.rs  parser.rs  validator.rs  webhook.rs
crates/nuncio-filter/tests/: webhook_integration_test.rs
crates/nuncio-gui/: Cargo.toml
crates/nuncio-gui/src/: ipc.rs  lib.rs  main.rs  sandbox.rs  view.rs
crates/nuncio-gui/src-tauri/: Cargo.toml  package.json  tauri.conf.json
crates/nuncio-gui/src-tauri/src/: lib.rs  main.rs
crates/nuncio-gui/tests/: gui_system_test.rs
crates/nuncio-gui/ui/: index.html  package.json
crates/nuncio-gui/ui/src/: App.tsx  index.css  types.ts
crates/nuncio-gui/ui/src/components/: AccountManagerModal.tsx  FilterRulesModal.tsx  MessageList.tsx  Reader.tsx  Sidebar.tsx  UpdateBanner.tsx
crates/nuncio-mail/: Cargo.toml
crates/nuncio-mail/src/: backend.rs  imap.rs  jmap.rs  lib.rs  mock.rs  parser.rs  smtp.rs
crates/nuncio-mail/tests/: wiremock_jmap_test.rs
crates/nuncio-mcp/: Cargo.toml
crates/nuncio-mcp/src/: lib.rs  main.rs  resources.rs  server.rs  tools.rs
crates/nuncio-mcp/tests/: mcp_system_test.rs
crates/nuncio-store/: Cargo.toml
crates/nuncio-store/src/: cipher.rs  db.rs  lib.rs  recovery.rs  search.rs  vault.rs
crates/nuncio-tui/: Cargo.toml
crates/nuncio-tui/src/: app.rs  html.rs  keybindings.rs  layout.rs  lib.rs  main.rs
crates/nuncio-tui/tests/: tui_system_test.rs  tui_visual_interaction_test.rs
crates/nunciod/: Cargo.toml
crates/nunciod/src/: lib.rs  main.rs  orchestrator.rs
crates/nunciod/tests/: daemon_e2e_test.rs
docs/: ARCHITECTURE.md  Architecture-Specification.md  Database-Corruption-Self-Healing.md  EXECUTIVE-AUDIT-REVIEW.md  Four-Great-Interfaces.md  Home.md  Multi-Platform-Release-Auto-Update.md  NSQL-Filter-Language-Specification.md  PLAN-enhanced-roadmap-v1-v2-v3.md  PLAN-hybrid-daemon-architecture.md  PLAN-multi-shell-parity-v1-v3.md  PLAN-nuncio-roadmap.md  PLAN-production-roadmap-100-plus.md  PLAN-testing-matrix-and-v3-release-policy.md  SESSION-STATE.md  TICKET-Database-Corruption-Recovery.md  TICKET-NSQL-Filter-Engine.md  TODO.md
tests/: ephemeral_harness.rs  integration_matrix.rs
wiki/: Architecture-Specification.md  Database-Corruption-and-Recovery-Specification.md  Executive-Review.md  Home.md  Multi-Shell-Parity-Matrix.md  NSQL-Filter-Language-Specification.md  Roadmap-and-Phases.md
