[workspace]
resolver = "2"
members = [
    "crates/nuncio-core",
    "crates/nuncio-mail",
    "crates/nuncio-cal",
    "crates/nuncio-store",
    "crates/nuncio-tui",
    "crates/nuncio-gui",
    "crates/nuncio-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Maes <james@kof22.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KofTwentyTwo/nuncio"
homepage = "https://nuncio.mx"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive", "env"] }
tempfile = "3.10"

