[workspace]
resolver = "2"
members = [
    "crates/nuncio-core",
    "crates/nuncio-mail",
    "crates/nuncio-cal",
    "crates/nuncio-store",
    "crates/nuncio-tui",
    "crates/nuncio-gui",
    "crates/nuncio-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Maes <james@kof22.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KofTwentyTwo/nuncio"
homepage = "https://nuncio.mx"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive", "env"] }
tempfile = "3.10"
keyring = "2.1"
age = "0.10"
aes-gcm = "0.10"
mail-parser = "0.9"
bytes = "1.6"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
async-imap = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
wiremock = "0.6"
icalendar = "0.15"
chrono-tz = "0.9"
rrule = "0.10"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = "0.36"
html2text = "0.12"











