[package]
name = "nuncio-cal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nuncio-core = { path = "../nuncio-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
icalendar.workspace = true
chrono-tz.workspace = true
rrule.workspace = true
chrono.workspace = true
reqwest.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
