[package]
name = "nuncio-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true
regex.workspace = true
zip.workspace = true

[dev-dependencies]
wiremock.workspace = true


