[package]
name = "nuncio-filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nuncio-core = { path = "../nuncio-core" }
sqlparser.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
hmac.workspace = true
sha2.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
