[package]
name = "nuncio-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nuncio-core = { path = "../nuncio-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
mail-parser.workspace = true
bytes.workspace = true
