[package]
name = "nuncio-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nuncio-core = { path = "../nuncio-core" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true
age.workspace = true
aes-gcm.workspace = true



[dev-dependencies]
tempfile.workspace = true
