[package]
name = "nuncio-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nuncio-core = { path = "../nuncio-core" }
nuncio-filter = { path = "../nuncio-filter" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true
age.workspace = true
aes-gcm.workspace = true
tempfile.workspace = true
zeroize.workspace = true
hex = "0.4"
hmac.workspace = true
sha2.workspace = true
chrono.workspace = true
