[package]
name = "nuncio-gui-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nuncio-core = { path = "../../nuncio-core" }
nuncio-gui = { path = ".." }
tauri = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "2.0"
